--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Dropbox</title>
 </head>
 <body>
@@ -31,18 +31,23 @@
             <section class="header-jumbotron">
                 <div class="jumbo-container">
                     <h1 class="jumbotron-title">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                    <p class="jumbotron-paragraph">Finalmente tutti i tuoi strumenti, contenuti e <br>
-                       collaboratori sono accessibili dallo stesso posto. <br>
-                       Dropbox business è più di uno spazio di <br>
-                       archiviazione sicuro: è un modo intelligente e <br>
-                       integrato per ottimizzare il flusso di lavoro esistente.
-                    </p>
-                    <button type="button" class="jumbotron-button button">Inizia la tua prova gratuita</button>
-                    <p class="jumbotron-disclaimer">Annulla in qualsiasi momento</p>
-                    <i class="fas fa-arrow-down"></i>
-
+                    <div class="clearfix jumbofloat">
+                        <p class="jumbotron-paragraph">Finalmente tutti i tuoi strumenti, contenuti e
+                             collaboratori sono accessibili dallo stesso posto.
+                            Dropbox business è più di uno spazio di 
+                            archiviazione sicuro: è un modo intelligente e 
+                            integrato per ottimizzare il flusso di lavoro esistente.
+                        </p>
+                        <button type="button" class="jumbotron-button button">Inizia la tua prova gratuita</button>
+                        <p class="jumbotron-disclaimer">Annulla in qualsiasi momento</p>
+                        <i class="fas fa-arrow-down"></i>
+                    </div>
                 </div>
+                <img src="img/jumbo.png" alt="jumbopng" class="jumbo-image">
             </section>
+            <main>
+
+            </main>
         </div>
     </header>
     
