--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button type="button" class="header-button button">Inizia</button>
             </nav>
             <section class="header-jumbotron">
-                <div class="jumbo-container">
+                <div class="jumbo-partcontainer">
                     <h1 class="jumbotron-title">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                     <div class="clearfix jumbofloat">
                         <p class="jumbotron-paragraph">Finalmente tutti i tuoi strumenti, contenuti e
@@ -46,7 +46,81 @@
                 <img src="img/jumbo.png" alt="jumbopng" class="jumbo-image">
             </section>
             <main>
+                <div class="main-container">
+                    <section>
+                        <h1 class="firstsection-title">Trova il piano Dropbbox business che fa per te</h1>
+                        <div class="circled-buttons">
+                            <input type="radio" class="firstcircledbutton">Fatturazione mensile
+                            <input type="radio" class="secondcircledbutton">Fatturazione annuale
+                        </div>
+                        <div class="clearfix">
+                            <div class="column">
+                                <p class="column-single"><i class="far fa-user">Singolo</i></p>
+                                <div class="column-body">
+                                    <h3>Professional</h3>
+                                    <h5 class="column-price">19,99 &euro;</h5>
+                                    <p class="column-choice">/mese</p>
+                                    <p><i class="far fa-user columnfa user1"> 1 utente</i></p>
+                                    <p><i class="far fa-folder columnfa folder1"> 3 TB di spazio di archiviazione sicuro</i></p>
+                                    <p><i class="fas fa-pencil-alt columnfa pencil1"> Funzioni di produttività premium e condivisione file semplice e sicura</i></p>
+                                    <button type="button" class="column-button button">Prova gratis per 30 giorni</button>
+                                    <p class="column-link">oppure <a href="" class="columndirect-link">acquista ora</a></p>
+                                    <h5 class="columnlist-title">Punti salienti del piano</h5>
+                                    <ul class="column-list">
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Invia file fino a 100 GB con Dropbox Transfert</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Cartelle offline su dispositivi mobili</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Pulizia remota dell'account</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Filigrana documento</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Assistenza prioritaria via email e chat</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="column secondcolumn">
+                                <p class="column-single"><i class="far fa-building">Team</i></p>
+                                <div class="column-body">
+                                    <h3>Standard</h3>
+                                    <h5 class="column-price">19,99 &euro;</h5>
+                                    <p class="column-choice">/ utente / mese, a partire da 3 utenti</p>
+                                    <p><i class="fas fa-user-plus columnfa user1"> 1 utente</i></p>
+                                    <p><i class="far fa-folder columnfa folder1"> 3 TB di spazio di archiviazione sicuro</i></p>
+                                    <p><i class="far fa-smile columnfa pencil1">Funzioni di produttività premium e condivisione file semplice e sicura</i></p>
+                                    <button type="button" class="column-button button">Prova gratis per 30 giorni</button>
+                                    <p class="column-link">oppure <a href="" class="columndirect-link">acquista ora</a></p>
+                                    <h5 class="columnlist-title">Punti salienti del piano</h5>
+                                    <ul class="column-list">
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Invia file fino a 100 GB con Dropbox Transfert</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Cartelle offline su dispositivi mobili</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Pulizia remota dell'account</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Filigrana documento</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Assistenza prioritaria via email e chat</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="column thirdcolumn">
+                                <p class="column-single"><i class="far fa-building">Team</i></p>
+                                <div class="column-body">
+                                    <h3>Advanced</h3>
+                                    <h5 class="column-price">19,99 &euro;</h5>
+                                    <p class="column-choice">/ utente / mese, a partire da 3 utenti</p>
+                                    <p><i class="far fa-user columnfa user1"> 1 utente</i></p>
+                                    <p><i class="far fa-folder columnfa folder1"> 3 TB di spazio di archiviazione sicuro</i></p>
+                                    <p><i class="fas fa-pencil-alt columnfa pencil1"> Funzioni di produttività premium e condivisione file semplice e sicura</i></p>
+                                    <button type="button" class="column-button button">Prova gratis per 30 giorni</button>
+                                    <p class="column-link">oppure <a href="" class="columndirect-link">acquista ora</a></p>
+                                    <h5 class="columnlist-title">Punti salienti del piano</h5>
+                                    <ul class="column-list">
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Invia file fino a 100 GB con Dropbox Transfert</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Cartelle offline su dispositivi mobili</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Pulizia remota dell'account</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Filigrana documento</li>
+                                        <li class="column-list-item"><span class="columncheck">&#10003;</span> Assistenza prioritaria via email e chat</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
+                </div>
             </main>
         </div>
     </header>
