--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
                             </div>
                         </div>
                     </section>
+                    <section>
+                            <div class="bigbox">
+                                <p class="column-single"><i class="far fa-building">Team</i></p>
+                                <div class="bigbox-content">
+                                    <h3 class="bigbox-title">Enterprise</h3>
+                                    <button type="button" class="button bigbox-button">Contatta l'ufficio vendite</button>
+                                    <h5 class="bigbox-subtitle">Contatta l'ufficio vendite per i prezzi</h5>
+                                    <p class="bigbox-description">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
                 </div>
             </main>
