imlplementazione seconda immagine

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="header-container">
+        <div id="header-container">
             <nav id="top-bar">
                 <img src="img/logo-small.png" alt="logo" class="top-bar-logo">
                 <ul class="header-list">
@@ -46,7 +46,7 @@
                 <img src="img/jumbo.png" alt="jumbopng" class="jumbo-image">
             </section>
             <main>
-                <div class="main-container">
+                <div id="main-container">
                     <section>
                         <h1 class="firstsection-title">Trova il piano Dropbbox business che fa per te</h1>
                         <div class="circled-buttons">
@@ -129,6 +129,16 @@
                                     <p class="bigbox-description">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
                                 </div>
                             </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="clearfix">
+                            <img src="img/partner.png" alt="partner" class="partner-image">
+                            <h3 class="partnertitle">Entra in contatto con un partner Dropbox</h3>
+                            <p class="partnerdescription">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari
+                                per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, 
+                                gestione e supporto continui.
+                            </p>
                         </div>
                     </section>
 
