fine terza section

--- a/index.html
+++ b/index.html
@@ -171,6 +171,68 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <h1 class="businesstitle">Esegui più operazione con Dropbox Business</h1>
+                <div class="clearfix">
+                    <div class="business-column">
+                        <img src="img/business-feature-switching-tools.png" alt="business1" class="business-image">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli
+                            e Presentazioni di Google, file Microsoft Office e <span class="underlinetext">Dropbox Paper</span>
+                            direttamente da Dropbox.
+                        </p>
+                    </div>
+                    <div class="business-column second-col">
+                        <img src="img/business-feature-coordinate-it.png" alt="business2" class="business-image">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli
+                            e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                            direttamente da Dropbox.
+                        </p>
+                    </div>
+                    <div class="business-column third-col">
+                        <img src="img/business-feature-multi-device.png" alt="business3" class="business-image">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli
+                            e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                            direttamente da Dropbox.
+                        </p>
+                    </div>
+                </div>
+                <div class="clearfix">
+                    <div class="business-column">
+                        <img src="img/business-feature-integrations-it.png" alt="business4" class="business-image">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli
+                            e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                            direttamente da Dropbox.
+                        </p>
+                    </div>
+                    <div class="business-column fifth-col">
+                        <img src="img/business-feature-send-files-it.png" alt="business2" class="business-image">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli
+                            e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                            direttamente da Dropbox.
+                        </p>
+                    </div>
+                    <div class="business-column sixth-col">
+                        <img src="img/business-feature-security.png" alt="business3" class="business-image">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli
+                            e Presentazioni di Google, file Microsoft Office e Dropbox Paper
+                            direttamente da Dropbox.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            
         </div>
     </main>
 </body>
