quarta section da ultimare

--- a/index.html
+++ b/index.html
@@ -177,16 +177,19 @@
                     <div class="business-column">
                         <img src="img/business-feature-switching-tools.png" alt="business1" class="business-image">
                         <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo
+                            strumento.
                             Crea, modifica e condividi contenuti cloud da Documenti, Fogli
-                            e Presentazioni di Google, file Microsoft Office e <span class="underlinetext">Dropbox Paper</span>
+                            e Presentazioni di Google, file Microsoft Office e <span class="underlinetext">Dropbox
+                                Paper</span>
                             direttamente da Dropbox.
                         </p>
                     </div>
                     <div class="business-column second-col">
                         <img src="img/business-feature-coordinate-it.png" alt="business2" class="business-image">
                         <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo
+                            strumento.
                             Crea, modifica e condividi contenuti cloud da Documenti, Fogli
                             e Presentazioni di Google, file Microsoft Office e Dropbox Paper
                             direttamente da Dropbox.
@@ -195,7 +198,8 @@
                     <div class="business-column third-col">
                         <img src="img/business-feature-multi-device.png" alt="business3" class="business-image">
                         <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo
+                            strumento.
                             Crea, modifica e condividi contenuti cloud da Documenti, Fogli
                             e Presentazioni di Google, file Microsoft Office e Dropbox Paper
                             direttamente da Dropbox.
@@ -206,7 +210,8 @@
                     <div class="business-column">
                         <img src="img/business-feature-integrations-it.png" alt="business4" class="business-image">
                         <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo
+                            strumento.
                             Crea, modifica e condividi contenuti cloud da Documenti, Fogli
                             e Presentazioni di Google, file Microsoft Office e Dropbox Paper
                             direttamente da Dropbox.
@@ -215,7 +220,8 @@
                     <div class="business-column fifth-col">
                         <img src="img/business-feature-send-files-it.png" alt="business2" class="business-image">
                         <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo
+                            strumento.
                             Crea, modifica e condividi contenuti cloud da Documenti, Fogli
                             e Presentazioni di Google, file Microsoft Office e Dropbox Paper
                             direttamente da Dropbox.
@@ -224,7 +230,8 @@
                     <div class="business-column sixth-col">
                         <img src="img/business-feature-security.png" alt="business3" class="business-image">
                         <h3>Passa di meno da uno strumento all'altro</h3>
-                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo strumento.
+                        <p class="business-col-description">Porta a termine le attività quotidiane con un solo
+                            strumento.
                             Crea, modifica e condividi contenuti cloud da Documenti, Fogli
                             e Presentazioni di Google, file Microsoft Office e Dropbox Paper
                             direttamente da Dropbox.
@@ -232,8 +239,39 @@
                     </div>
                 </div>
             </section>
-            
+            <section>
+                <h1 class="team-title">Più di 500.000 team <br>
+                    utilizzano Dropbox Business
+                </h1>
+                <p class="clientsearch"><a href="" class="clientsearchlink">Scopri di più sui nostri clienti</a></p>
+                <div class="form bgform">
+                    <img src="img/designit.svg" alt="design" class="designimage">
+                </div>
+                <div class="form bgform2">
+                    <img src="img/arizona_state_university.svg" alt="arizona" class="designimage">
+                </div>
+                <div class="text-cit">
+                    <img src="img/designit.svg" alt="design" class="designimage">
+                    <p class="morten-speech">"I membri del nostro lavorano costantemente in Paesi, fusi orari
+                        uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze,
+                        ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte
+                        soluzioni sono compatibili con queste esigenze, ma nessuna è facile
+                        quanto Dropbox Paper."
+                        <br>
+                        <br>
+                        Morten Thomsen, Global IT Lead
+                    </p>
+                </div>
+                <div class="form bgform3">
+                    <img src="img/world_bicycle_relief.svg" alt="design" class="designimage">
+                </div>
+                <div class="form bgform4">
+                    <img src="img/hearst_corp.svg" alt="arizona" class="designimage">
+                </div>
+            </section>
+            sec
         </div>
     </main>
 </body>
+
 </html>
