completamento main con ultime due parti da migliorare

--- a/index.html
+++ b/index.html
@@ -268,8 +268,20 @@
                 <div class="form bgform4">
                     <img src="img/hearst_corp.svg" alt="arizona" class="designimage">
                 </div>
+                <div class="subcontainer">
+                    <h1 class="subc-title">Porta Dropbox Business <br> nella tua azienda.</h1>
+                    <button type="button" class="subc-button">Inizia la tua prova gratuita</button>
+                </div>
             </section>
-            sec
+            <section>
+                <div class="questions">
+                    <h2 class="questiontitle">Domande frequenti</h2>
+                    <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced?<span><i class="fas fa-angle-down"></i></span></h5>
+                    <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced?<span><i class="fas fa-angle-down"></i></span></h5>
+                    <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced?<span><i class="fas fa-angle-down"></i></span></h5>
+                    <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business Advanced?<span><i class="fas fa-angle-down"></i></span></h5>
+                </div>
+            </section>
         </div>
     </main>
 </body>
