implementazione footer con ultima parte del main da rivedere e completare

--- a/index.html
+++ b/index.html
@@ -284,6 +284,52 @@
             </section>
         </div>
     </main>
+    <footer>
+        <div class="footer-container">
+            <ul class="footer-list">
+                <li><h4 class="footer-li-title">Dropbox</h4></li>
+                <li><a href="" class="footer-li">Applicazione Desktop</a></li>
+                <li><a href="" class="footer-li">Perchè Dropbox</a></li>
+                <li><a href="" class="footer-li">Piani</a></li>
+                <li><a href="" class="footer-li">Sicurezza</a></li>
+                <li><a href="" class="footer-li">Funzioni</a></li>
+            </ul>
+            <ul class="footer-list">
+                <li><h4 class="footer-li-title">Prodotti</h4></li>
+                <li><a href="" class="footer-li">Applicazione Desktop</a></li>
+                <li><a href="" class="footer-li">Perchè Dropbox</a></li>
+                <li><a href="" class="footer-li">Piani</a></li>
+                <li><a href="" class="footer-li">Sicurezza</a></li>
+                <li><a href="" class="footer-li">Funzioni</a></li>
+            </ul>
+            <ul class="footer-list">
+                <li><h4 class="footer-li-title">Azienda</h4></li>
+                <li><a href="" class="footer-li">Applicazione Desktop</a></li>
+                <li><a href="" class="footer-li">Perchè Dropbox</a></li>
+                <li><a href="" class="footer-li">Piani</a></li>
+                <li><a href="" class="footer-li">Sicurezza</a></li>
+                <li><a href="" class="footer-li">Funzioni</a></li>
+            </ul>
+            <ul class="footer-list">
+                <li><h4 class="footer-li-title">Supporto</h4></li>
+                <li><a href="" class="footer-li">Applicazione Desktop</a></li>
+                <li><a href="" class="footer-li">Perchè Dropbox</a></li>
+                <li><a href="" class="footer-li">Piani</a></li>
+                <li><a href="" class="footer-li">Sicurezza</a></li>
+                <li><a href="" class="footer-li">Funzioni</a></li>
+            </ul>
+            <ul class="footer-list lastul">
+                <li><h4 class="footer-li-title">Community</h4></li>
+                <li><a href="" class="footer-li">Applicazione Desktop</a></li>
+                <li><a href="" class="footer-li">Perchè Dropbox</a></li>
+                <li><a href="" class="footer-li">Piani</a></li>
+            </ul>
+            <hr class="lasthr">
+            <i class="fas fa-globe-americas"> Italiano &utrif;</i>
+            
+
+        </div>
+    </footer>
 </body>
 
 </html>
