piccolo aggiornamento con parte main ancora da ultimare

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                                     condivisione file semplice e sicura</i></p>
                             <button type="button" class="column-button button">Prova gratis per 30 giorni</button>
                             <p class="column-link">oppure <a href="" class="columndirect-link">acquista ora</a></p>
+                            <hr class="col-hr">
                             <h5 class="columnlist-title">Punti salienti del piano</h5>
                             <ul class="column-list">
                                 <li class="column-list-item"><span class="columncheck">&#10003;</span> Invia file fino a
@@ -98,6 +99,7 @@
                                     file semplice e sicura</i></p>
                             <button type="button" class="column-button button">Prova gratis per 30 giorni</button>
                             <p class="column-link">oppure <a href="" class="columndirect-link">acquista ora</a></p>
+                            <hr class="col-hr">
                             <h5 class="columnlist-title">Punti salienti del piano</h5>
                             <ul class="column-list">
                                 <li class="column-list-item"><span class="columncheck">&#10003;</span> Invia file fino a
@@ -125,6 +127,7 @@
                                     condivisione file semplice e sicura</i></p>
                             <button type="button" class="column-button button">Prova gratis per 30 giorni</button>
                             <p class="column-link">oppure <a href="" class="columndirect-link">acquista ora</a></p>
+                            <hr class="col-hr">
                             <h5 class="columnlist-title">Punti salienti del piano</h5>
                             <ul class="column-list">
                                 <li class="column-list-item"><span class="columncheck">&#10003;</span> Invia file fino a
