--- a/index.html
+++ b/index.html
@@ -19,14 +19,34 @@
             <nav id="top-bar">
                 <img src="img/logo-small.png" alt="logo" class="top-bar-logo">
                 <ul class="header-list">
-                    <li class="header-element list"><a href="" class="header-element-link">Perchè Dropbox?</a></li>
-                    <li class="header-element list"><a href="" class="header-element-link">Funzioni</a></li>
-                    <li class="header-element list"><a href="" class="header-element-link">Piani e prezzi</a></li>
+                    <div class="drop-down">
+                        <li class="header-element list"><a href="" class="header-element-link">Perchè Dropbox?</a></li>
+                        <div class="dropdown-content">
+                            <a href="">Affidabilità</a>
+                            <a href="">Professionalità</a>
+                            <a href="">Competenza</a>
+                        </div>
+                    </div>
+                    <div class="drop-down">
+                        <li class="header-element list"><a href="" class="header-element-link">Funzioni</a></li>
+                        <div class="dropdown-content">
+                            <a href="">Condivisione</a>
+                            <a href="">Più GB</a>
+                            <a href="">Intuitività</a>
+                        </div>
+                    </div>
+                    <div class="drop-down">
+                        <li class="header-element list"><a href="" class="header-element-link">Piani e prezzi</a></li>
+                        <div class="dropdown-content">
+                            <a href="">Tariffe</a>
+                            <a href="">Sconti</a>
+                            <a href="">Agevolazioni</a>
+                        </div>
+                    </div>
                 </ul>
                 <ul class="header-list secondlist">
                     <li class="header-element list"><a href="" class="header-element-link">Supporto</a></li>
-                    <li class="header-element list"><a href="" class="header-element-link">Contatta l'ufficio
-                            vendite</a></li>
+                    <li class="header-element list"><a href="" class="header-element-link">Contatta l'ufficio vendite</a></li>
                     <li class="header-element list"><a href="" class="header-element-link">Accedi</a></li>
                 </ul>
                 <button type="button" class="header-button button">Inizia</button>
@@ -285,14 +305,43 @@
             <div id="second-main-container">
                 <div class="questions">
                     <h2 class="questiontitle">Domande frequenti</h2>
-                    <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                        Advanced?<span><i class="fas fa-angle-down"></i></span></h5>
-                    <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                        Advanced?<span><i class="fas fa-angle-down"></i></span></h5>
-                    <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                        Advanced?<span><i class="fas fa-angle-down"></i></span></h5>
-                    <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business
-                        Advanced?<span><i class="fas fa-angle-down"></i></span></h5>
+                    <hr>
+                    <div class="drop-question">
+                        <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business
+                            Advanced?<span><i class="fas fa-angle-down"></i></span>
+                        </h5>
+                        <div class="drop-question-content">
+                            <p>Il piano Standard fornisce ai team 5 TB (5000 GB) di spazio di archiviazione e semplici strumenti di condivisione e collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre tutto lo spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui nostri piani, consulta questa pagina.</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="drop-question">
+                        <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business
+                             Advanced?<span><i class="fas fa-angle-down"></i></span>
+                        </h5>
+                        <div class="drop-question-content">
+                                <p>Il piano Standard fornisce ai team 5 TB (5000 GB) di spazio di archiviazione e semplici strumenti di condivisione e collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre tutto lo spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui nostri piani, consulta questa pagina.</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="drop-question">
+                        <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business
+                            Advanced?<span><i class="fas fa-angle-down"></i></span>
+                        </h5>
+                        <div class="drop-question-content">
+                            <p>Il piano Standard fornisce ai team 5 TB (5000 GB) di spazio di archiviazione e semplici strumenti di condivisione e collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre tutto lo spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui nostri piani, consulta questa pagina.</p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="drop-question">
+                        <h5 class="question"> Qual è la differenza tra Dropbox Business standard e Dropbox Business
+                            Advanced?<span><i class="fas fa-angle-down"></i></span>
+                        </h5>
+                        <div class="drop-question-content">
+                            <p>Il piano Standard fornisce ai team 5 TB (5000 GB) di spazio di archiviazione e semplici strumenti di condivisione e collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre tutto lo spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui nostri piani, consulta questa pagina.</p>
+                        </div>
+                    </div>
+                    <hr>
                 </div>
             </div>
         </section>
