--- a/index.html
+++ b/index.html
@@ -271,16 +271,16 @@
         <section>
             <div id="svgpart-container">
                 <div class="svg-firstcol">
-                    <div class="svg svg-container1">
-                        <img class="design" src="/img/designit.svg" alt="design">
+                    <div class="svg-container">
+                        <img class="design" src="img/designit.svg" alt="design">
                     </div>
-                    <div class="svg svg-container2">
+                    <div class="svg-container invert">
                         <img class="arizona" src="img/arizona_state_university.svg" alt="arizona">
                     </div>
-                    <div class="svg svg-container3">
+                    <div class="svg-container floridasvg">
                         <img class="florida"src="img/university_of_florida.svg" alt="florida">
                     </div>
-                    <div class="svg svg-container4">
+                    <div class="svg-container invert">
                         <img class="topps" src="img/topps.svg" alt="topps">
                     </div>
                 </div>
@@ -296,16 +296,16 @@
                     <p class="morten-cit sign">Morten Thomsen, Global IT Lead</p>
                 </div>
                 <div class="svg-thirdcol">
-                    <div class="svg svg-container5">
+                    <div class="svg-container invert">
                         <img class="bicycle" src="img/world_bicycle_relief.svg" alt="bicycle">
                     </div>
-                    <div class="svg svg-container6">
+                    <div class="svg-container invert">
                         <img class="hearst" src="img/hearst_corp.svg" alt="hearst">
                     </div>
-                    <div class="svg svg-container7">
+                    <div class="svg-container invert">
                         <img class="planet" src="img/lonely_planet.svg" alt="planet">
                     </div>
-                    <div class="svg svg-container8">
+                    <div class="svg-container invert">
                         <img class="channel" src="img/clear_channel.svg" alt="channel">
                     </div>
                 </div>
