--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         </div>
         </section>
         <section>
-            <div class="svgpart-container container90">
+            <div class="svgpart-container clearfix container90">
                 <div class="svg-firstcol">
                     <div class="svg-container">
                         <img class="design" src="img/designit.svg" alt="design">
@@ -296,17 +296,17 @@
                     <p class="morten-cit font12 sign">Morten Thomsen, Global IT Lead</p>
                 </div>
                 <div class="svg-thirdcol">
-                    <div class="svg-container invert">
-                        <img class="bicycle" src="img/world_bicycle_relief.svg" alt="bicycle">
+                    <div class="svg-container bicycle invert">
+                        <img src="img/world_bicycle_relief.svg" alt="bicycle">
                     </div>
-                    <div class="svg-container invert">
-                        <img class="hearst" src="img/hearst_corp.svg" alt="hearst">
+                    <div class="svg-container hearst invert">
+                        <img src="img/hearst_corp.svg" alt="hearst">
                     </div>
-                    <div class="svg-container invert">
-                        <img class="planet" src="img/lonely_planet.svg" alt="planet">
+                    <div class="svg-container planet invert">
+                        <img src="img/lonely_planet.svg" alt="planet">
                     </div>
-                    <div class="svg-container invert">
-                        <img class="channel" src="img/clear_channel.svg" alt="channel">
+                    <div class="svg-container channel invert">
+                        <img src="img/clear_channel.svg" alt="channel">
                     </div>
                 </div>
                 <div class="db-business">
