--- a/index.html
+++ b/index.html
@@ -271,17 +271,17 @@
         <section>
             <div class="svgpart-container clearfix container90">
                 <div class="svg-firstcol">
-                    <div class="svg-container">
-                        <img class="design" src="img/designit.svg" alt="design">
+                    <div class="svg-container design invert">
+                        <img src="img/designit.svg" alt="design">
                     </div>
-                    <div class="svg-container invert">
-                        <img class="arizona" src="img/arizona_state_university.svg" alt="arizona">
+                    <div class="svg-container arizona invert">
+                        <img src="img/arizona_state_university.svg" alt="arizona">
                     </div>
-                    <div class="svg-container floridasvg">
-                        <img class="florida"src="img/university_of_florida.svg" alt="florida">
+                    <div class="svg-container florida invert">
+                        <img src="img/university_of_florida.svg" alt="florida">
                     </div>
-                    <div class="svg-container invert">
-                        <img class="topps" src="img/topps.svg" alt="topps">
+                    <div class="svg-container topps invert">
+                        <img src="img/topps.svg" alt="topps">
                     </div>
                 </div>
                 <div class="svg-secondcol">
