esercizio completo + bonus

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>
             </section>
             <section>
-                <div class="bigbox">
+                <div class="bigbox clearfix">
                     <p class="column-single"><i class="far fa-building">Team</i></p>
                     <div class="bigbox-content">
                         <h3 class="bigbox-title">Enterprise</h3>
@@ -179,7 +179,7 @@
                 </div>
             </section>
             <section>
-                <div class="clearfix partner-box">
+                <div class="partner-box clearfix">
                     <div class="partnerimgcontainer">
                         <img src="img/partner.png" alt="partner" class="partner-image">
                     </div>
